Applying good practices